--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="action_settings">Settings</string>
     <string name="no_gist_description">No description</string>
     <string name="navigation_gists">Gists</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_gists">Gists</string>
+    <string name="navigation_profile">Profile</string>
 
 </resources>
