--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,11 @@
     <string name="public_gists">Gists</string>
     <string name="followers">Followers</string>
     <string name="following">Following</string>
+    <string name="navigation_repos">Repos</string>
+    <string name="navigation_following">Follwing</string>
+    <string name="navigation_followers">Followers</string>
+    <string name="title_followers">Followers</string>
+    <string name="title_following">Following</string>
+    <string name="title_repos">Repos</string>
 
 </resources>
