--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="followers">Followers</string>
     <string name="following">Following</string>
     <string name="navigation_repos">Repos</string>
-    <string name="navigation_following">Follwing</string>
+    <string name="navigation_following">Following</string>
     <string name="navigation_followers">Followers</string>
     <string name="title_followers">Followers</string>
     <string name="title_following">Following</string>
