--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="title_followers">Followers</string>
     <string name="title_following">Following</string>
     <string name="title_repos">Repos</string>
+    <string name="star_icon_text">{fa_star} %1$d</string>
+    <string name="fork_icon_text">{fa_code_fork} %1$d</string>
 
 </resources>
