--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="tab_watched_repos">Watched</string>
     <string name="tab_starred_repos">Starred</string>
     <string name="unauthorized">Unauthorized acces</string>
+    <string name="change_mode">Change mode</string>
 </resources>
