--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="Readme">readme</string>
     <string name="Source">source</string>
     <string name="Info">info</string>
+    <string name="client_id">60f30c819ae20252ab74</string>
+    <string name="client_secret">c46258762edf73a3ef2b695545950ec962c171ec</string>
+    <string name="client_callback">http://bernatborras.net/giskarios</string>
 </resources>
