--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="client_id">60f30c819ae20252ab74</string>
     <string name="client_secret">c46258762edf73a3ef2b695545950ec962c171ec</string>
     <string name="client_callback">http://bernatborras.net/giskarios</string>
+    <string name="no_followers">There isn\'t any follower</string>
+    <string name="no_followings">There isn\'t any following you</string>
+    <string name="no_repositories">No repositories found</string>
+    <string name="no_watched_repositories">No watched repositories found</string>
+    <string name="no_starred_repositories">No starred repositories found</string>
 </resources>
