--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,6 @@
     <string name="tab_watched_repos">Watched</string>
     <string name="tab_starred_repos">Starred</string>
     <string name="unauthorized">Unauthorized acces</string>
-    <string name="change_mode">Change mode</string>
     <string name="Readme">readme</string>
     <string name="Source">source</string>
     <string name="Info">info</string>
@@ -42,4 +41,9 @@
     <string name="no_watched_repositories">No watched repositories found</string>
     <string name="no_starred_repositories">No starred repositories found</string>
     <string name="action_share_repo">Share</string>
+    <string name="show_parent">Show parent</string>
+    <string name="menu_star">Star</string>
+    <string name="menu_unstar">Unstar</string>
+    <string name="menu_watch">Watch</string>
+    <string name="menu_unwatch">Unwatch</string>
 </resources>
