--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="star_icon_text">{fa_star} %1$d</string>
     <string name="fork_icon_text">{fa_code_fork} %1$d</string>
     <string name="tab_repos">Repos</string>
-    <string name="tab_watched_repos">Watched</string>
-    <string name="tab_starred_repos">Starred</string>
+    <string name="navigation_watched_repos">Watched</string>
+    <string name="navigation_starred_repos">Starred</string>
     <string name="unauthorized">Unauthorized acces</string>
     <string name="Readme">readme</string>
     <string name="Source">source</string>
