Fab button on list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="cancel">Cancel</string>
     <string name="retry">Retry</string>
     <string name="no_results">No results</string>
+    <string name="issue_created_by"><![CDATA[Creates by <b>%1$s</b>]]></string>
 </resources>
