--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,8 @@
     <string name="milestone">Milestone</string>
     <string name="assignee">Assignee</string>
     <string name="labels">Labels, separated with comma</string>
+    <string name="issue_title_mandatory">Title is mandatory</string>
+    <string name="action_send_issue">Send issue</string>
+    <string name="create_issue_error">Error creating issue</string>
 
 </resources>
