--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="cancel">Cancel</string>
     <string name="retry">Retry</string>
     <string name="no_results">No results</string>
-    <string name="issue_created_by"><![CDATA[Creates by <b>%1$s</b>]]></string>
+    <string name="issue_created_by"><![CDATA[Created by <b>%1$s</b>]]></string>
     <string name="title_activity_new_issue">New issue</string>
     <string name="hello_world">Hello world!</string>
     <string name="title">Title</string>
