--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="issue_title_mandatory">Title is mandatory</string>
     <string name="action_send_issue">Send issue</string>
     <string name="create_issue_error">Error creating issue</string>
+    <string name="no_issues_found">No issues found</string>
 
 </resources>
