--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="title_activity_issue_detail">IssueDetailActivity</string>
     <string name="discussion">discussion</string>
     <string name="issue_detail_title">%1$s issue # %2$d</string>
+    <string name="no_comments">No comments</string>
 
 </resources>
