Close issue if acces is granted.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,6 @@
     <string name="no_comments">No comments</string>
     <string name="addComment">Add comment</string>
     <string name="closeIssue">Close issue</string>
+    <string name="accept">Accept</string>
 
 </resources>
