Private repos label on adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
     <string name="addComment">Add comment</string>
     <string name="closeIssue">Close issue</string>
     <string name="accept">Accept</string>
+    <string name="row_private_repo">PRIVATE</string>
 
 </resources>
