--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,7 @@
     <string name="no_organizations">There isn\'t organizations</string>
     <string name="title_activity_comment_issue">CommentIssueActivity</string>
     <string name="add_comment">Add comment</string>
+    <string name="no_commits">No commits here</string>
+    <string name="commits">Commits</string>
 
 </resources>
