--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,6 @@
     <string name="title_activity_settings">Settings</string>
     <string name="pref_gthub_link_interceptor">Intercept links</string>
     <string name="error_loading_image">Image cannot be loaded</string>
+    <string name="action_menu">Menu</string>
 
 </resources>
