--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,10 @@
     <string name="unknown_language">Unknown</string>
     <string name="pref_repos_sor_order">Repositories sort order</string>
     <string name="menu_repo_settings">Repository settings</string>
+    <string name="description">Description</string>
+    <string name="repo_check_private">Private</string>
+    <string name="repo_check_issue">Has issues</string>
+    <string name="repo_check_wiki">Has wiki</string>
+    <string name="repo_check_downloads">Downloads</string>
 
 </resources>
