--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,6 @@
     <string name="noevents">No events</string>
     <string name="menu_events">Events</string>
     <string name="pushed">Pushed</string>
+    <string name="watched">Watched</string>
 
 </resources>
