Issue comment view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,5 +95,6 @@
     <string name="pushed">Pushed</string>
     <string name="watched">Watched</string>
     <string name="created">Created</string>
+    <string name="issue_commented">Issue comment</string>
 
 </resources>
