Create repository gitignore list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,5 +92,6 @@
     <string name="repo_check_downloads">Downloads</string>
     <string name="add_gitignore">Add GitIgnore</string>
     <string name="add_license">Add license</string>
+    <string name="no_gitignore_template">No gitignore</string>
 
 </resources>
