Clear SmoothProgressBar and hide events that are not handled yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,6 @@
     <string name="add_gitignore">Add GitIgnore</string>
     <string name="add_license">Add license</string>
     <string name="no_gitignore_template">No gitignore</string>
+    <string name="follow">Follow</string>
 
 </resources>
