ProfileActivity material design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,7 @@
     <string name="add_license">Add license</string>
     <string name="no_gitignore_template">No gitignore</string>
     <string name="follow">Follow</string>
+    <string name="joined_at">Joined at %s</string>
+    <string name="joined_at_date_format">dd MMM yyyy</string>
 
 </resources>
