--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,6 @@
     <string name="joined_at">Joined at %s</string>
     <string name="joined_at_date_format">dd MMM yyyy</string>
     <string name="public_data">Public data</string>
+    <string name="title_activity_repos">%s repositories</string>
 
 </resources>
