--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,7 @@
     <string name="joined_at_date_format">dd MMM yyyy</string>
     <string name="public_data">Public data</string>
     <string name="title_activity_repos">%s repositories</string>
+    <string name="navigation_settings">Settings</string>
+    <string name="navigation_about">About</string>
 
 </resources>
