--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,5 +111,6 @@
     <string name="title_activity_repos">%s repositories</string>
     <string name="navigation_settings">Settings</string>
     <string name="navigation_about">About</string>
+    <string name="menu_my_profile">My profile</string>
 
 </resources>
