--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,5 +112,9 @@
     <string name="navigation_settings">Settings</string>
     <string name="navigation_about">About</string>
     <string name="menu_my_profile">My profile</string>
+    <string name="markdown_fragment_title">Readme</string>
+    <string name="issues_fragment_title">Issues</string>
+    <string name="files_fragment_title">Source</string>
+    <string name="commits_fragment_title">Commits</string>
 
 </resources>
