--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,6 @@
     <string name="commits_fragment_title">Commits</string>
     <string name="source_download_notification">Source code from %1$s was queued</string>
     <string name="source_download_notification_finished">Source code from %1$s was downloaded</string>
+    <string name="pref_repos_download_type">Download file extension</string>
 
 </resources>
