--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,5 +121,7 @@
     <string name="pref_repos_download_type">Download file extension</string>
     <string name="title_activity_commits">Commits</string>
     <string name="commit_authored_at">%1$s authored %2$d days ago</string>
+    <string name="commit_additions">Additions %d</string>
+    <string name="commit_deletions">Deletions %d</string>
 
 </resources>
