--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="tab_repos_parent">Repositories</string>
     <string name="repos_num">%d Repositories</string>
     <string name="gists_num">%d Gists</string>
+    <string name="private_gists_num">%d Private gists</string>
     <string name="collaborators_num">%d Collaborators</string>
     <string name="one_collaborator_num">%d Collaborator</string>
     <string name="navigation_repos">My Repositories</string>
@@ -108,6 +109,7 @@
     <string name="joined_at">Joined at %s</string>
     <string name="joined_at_date_format">dd MMM yyyy</string>
     <string name="public_data">Public data</string>
+    <string name="plan_data">Plan</string>
     <string name="title_activity_repos">%s repositories</string>
     <string name="navigation_settings">Settings</string>
     <string name="navigation_about">About</string>
@@ -126,5 +128,8 @@
     <string name="unfollow">Unfollow</string>
     <string name="fold_issue">Fold issue detail</string>
     <string name="unfold_issue">Unfold issue detail</string>
+    <string name="quota_data">%s quota</string>
+    <string name="collaborators_data">%d collaborators</string>
+    <string name="repos_data_profile">Using %1$d of %2$d private repositories.</string>
 
 </resources>
