--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="title_repos">Repos</string>
     <string name="star_icon_text">%1$d</string>
     <string name="fork_icon_text">%1$d</string>
-    <string name="unauthorized">Unauthorized acces</string>
+    <string name="unauthorized">Unauthorized access</string>
     <string name="readme">Readme</string>
     <string name="source">Source</string>
     <string name="issues">Issues</string>
