--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,6 @@
     <string name="repos_data_profile">Using %1$d of %2$d private repositories.</string>
     <string name="about_title">About</string>
     <string name="pull_requests_fragment_title">Pull requests</string>
+    <string name="no_prs_found">No pull requests found</string>
 
 </resources>
