--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,5 +144,7 @@
     <string name="loading_user">Loading user</string>
     <string name="navigation_people">People</string>
     <string name="code_download">Source code is waiting for download</string>
+    <string name="action_notifications">Notifications</string>
+    <string name="no_notifications">No notifications</string>
 
 </resources>
