--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="tab_repos_parent">Repositories</string>
     <string name="repos_num">%d Repositories</string>
     <string name="gists_num">%d Gists</string>
+    <string name="orgs_num">%d Organizations</string>
     <string name="private_gists_num">%d Private gists</string>
     <string name="collaborators_num">%d Collaborators</string>
     <string name="one_collaborator_num">%d Collaborator</string>
@@ -111,6 +112,7 @@
     <string name="public_data">Public data</string>
     <string name="plan_data">Plan</string>
     <string name="title_activity_repos">%s repositories</string>
+    <string name="title_activity_orgs">%s organizations</string>
     <string name="navigation_settings">Settings</string>
     <string name="navigation_about">About</string>
     <string name="menu_my_profile">My profile</string>
