--- a/gistsapp/src/main/res/values/strings.xml
+++ b/gistsapp/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="add_acount">Add account</string>
     <string name="add_account_description">Add github account</string>
+    <string name="no_gists">No gists</string>
 </resources>
