Gists list basic layout

--- a/gistsapp/src/main/res/values/strings.xml
+++ b/gistsapp/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="add_acount">Add account</string>
     <string name="add_account_description">Add github account</string>
     <string name="no_gists">No gists</string>
+    <string name="num_of_files">%d files</string>
 </resources>
