--- a/gistsapp/src/main/res/values/strings.xml
+++ b/gistsapp/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="add_account_description">Add github account</string>
     <string name="no_gists">No gists</string>
     <string name="num_of_files">%d files</string>
+    <string name="create_gist">Create new gist</string>
 </resources>
