Share gist file

--- a/gistsapp/src/main/res/values/strings.xml
+++ b/gistsapp/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="no_gists">No gists</string>
     <string name="num_of_files">%d files</string>
     <string name="create_gist">Create new gist</string>
+    <string name="Share">Share</string>
 </resources>
