--- a/gistsapp/src/main/res/values/strings.xml
+++ b/gistsapp/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="send_gist_to">Send gist</string>
     <string name="open_gist">Open gist</string>
     <string name="user_gists">%s gists</string>
+    <string name="editor_content_hint">Code</string>
+    <string name="editor_title_hint">Filename</string>
+    <string name="editor_discard">Empty file discarded</string>
 </resources>
