--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,6 +143,7 @@
     <string name="no_prs_found">No pull requests found</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search</string>
+    <string name="loading_token">Loading token</string>
     <string name="loading_user">Loading user</string>
     <string name="navigation_people">People &#038; Organizations</string>
     <string name="code_download">Source code is waiting for download</string>
