--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,4 +183,7 @@
     <string name="row_private_gist">PRIVATE</string>
     <string name="gist_not_loaded">Gist not loaded</string>
     <string name="creating_issue">Creating issue</string>
+    <string name="download">Download</string>
+    <string name="change_branch">Change branch</string>
+    <string name="navigate_up">Up</string>
 </resources>
