--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,4 +186,5 @@
     <string name="download">Download</string>
     <string name="change_branch">Change branch</string>
     <string name="navigate_up">Up</string>
+    <string name="no_content">No files</string>
 </resources>
