--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,4 +205,7 @@
     <string name="issue_demilestoned">Removed %1$s milestone %2$s</string>
     <string name="issue_merged">Merged into %1$1 %2$s</string>
     <string name="issue_referenced">Referenced in %1$1 %2$s</string>
+    <string name="no_collaborators">No collaborators</string>
+    <string name="collaborators_fragment_title">Collaborators</string>
+    <string name="owner">Owner</string>
 </resources>
